[package]
name = "tests"
publish = false
version = { workspace = true }
edition = { workspace = true }

[dependencies]
blst = { workspace = true }
executor-http-client = { workspace = true }
nomos-node = { workspace = true, default-features = false }
nomos-executor = { workspace = true, default-features = false }
nomos-network = { workspace = true, features = ["libp2p"] }
nomos-blend-service = { workspace = true, features = ["libp2p"] }
nomos-blend = { workspace = true }
nomos-blend-message = { workspace = true }
cryptarchia-consensus = { workspace = true }
nomos-tracing = { workspace = true }
nomos-tracing-service = { workspace = true }
nomos-api = { workspace = true }
overwatch-rs = { workspace = true, rev = "f5f7ea0" }
nomos-core = { workspace = true }
cryptarchia-engine = { workspace = true, features = ["serde"] }
nomos-ledger = { workspace = true, features = ["serde"] }
cl = { workspace = true }
nomos-mempool = { workspace = true, features = ["mock", "libp2p"] }
nomos-da-network-service = { workspace = true }
nomos-da-dispersal = { workspace = true }
nomos-da-indexer = { workspace = true }
nomos-da-verifier = { workspace = true }
nomos-da-sampling = { workspace = true }
nomos-storage = { workspace = true }
subnetworks-assignations = { workspace = true }
full-replication = { workspace = true }
hex = { workspace = true }
kzgrs-backend = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
secp256k1 = { workspace = true, features = ["rand"] }
reqwest = { workspace = true, features = ["json"] }
nomos-libp2p = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
fraction = { workspace = true }
ntest = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
nomos-cli = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["getrandom", "static_secrets"] }

[[test]]
name = "test_cryptarchia_happy_path"
path = "src/tests/cryptarchia/happy.rs"

[[test]]
name = "test_da"
path = "src/tests/da.rs"

[features]
debug = []
