[package]
edition = "2021"
license = { workspace = true }
name    = "tests"
publish = false
version = "0.1.0"

[dependencies]
async-trait              = "0.1"
blst                     = { version = "0.3.11" }
cl                       = { workspace = true }
criterion                = { version = "0.5", features = ["async_tokio"] }
cryptarchia-consensus    = { workspace = true }
cryptarchia-engine       = { workspace = true, features = ["serde"] }
executor-http-client     = { workspace = true }
fixed                    = "1"
fraction                 = "0.13"
full-replication         = { workspace = true }
futures                  = "0.3"
hex                      = "0.4.3"
kzgrs-backend            = { workspace = true }
nomos-api                = { workspace = true }
nomos-blend              = { workspace = true }
nomos-blend-message      = { workspace = true }
nomos-blend-service      = { workspace = true, features = ["libp2p"] }
nomos-cli                = { workspace = true }
nomos-core               = { workspace = true }
nomos-da-dispersal       = { workspace = true }
nomos-da-indexer         = { workspace = true }
nomos-da-network-core    = { workspace = true }
nomos-da-network-service = { workspace = true }
nomos-da-sampling        = { workspace = true }
nomos-da-verifier        = { workspace = true }
nomos-executor           = { workspace = true, default-features = false, features = ["tracing"] }
nomos-ledger             = { workspace = true, features = ["serde"] }
nomos-libp2p             = { workspace = true }
nomos-mempool            = { workspace = true, features = ["libp2p", "mock"] }
nomos-network            = { workspace = true, features = ["libp2p"] }
nomos-node               = { workspace = true, default-features = false }
nomos-storage            = { workspace = true }
nomos-tracing            = { workspace = true }
nomos-tracing-service    = { workspace = true }
ntest                    = "0.9.0"
once_cell                = "1"
overwatch-rs             = { workspace = true }
rand                     = "0.8"
reqwest                  = { version = "0.12", features = ["json"] }
secp256k1                = { version = "0.26", features = ["rand"] }
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1.0"
serde_yaml               = "0.9"
subnetworks-assignations = { workspace = true }
tempfile                 = "3.6"
time                     = "0.3"
tokio                    = "1"
tracing                  = "0.1"
x25519-dalek             = { version = "2", features = ["getrandom", "static_secrets"] }

[[test]]
name = "test_cryptarchia_happy_path"
path = "src/tests/cryptarchia/happy.rs"

[[test]]
name = "test_da"
path = "src/tests/da.rs"
