[package]
edition = "2021"
license = { workspace = true }
name    = "common-http-client"
version = "0.1.0"

[dependencies]
nomos-core          = { workspace = true }
nomos-da-messages   = { workspace = true }
reqwest             = { workspace = true }
serde               = "1.0"
thiserror           = "1.0"
serde_json          = "1.0.140"
url                 = "2.5.4"
