[package]
edition = "2021"
license = { workspace = true }
name    = "executor-http-client"
version = "0.1.0"

[dependencies]
common-http-client = { workspace = true }
nomos-core         = { workspace = true }
nomos-executor     = { workspace = true }
reqwest            = { workspace = true }
serde              = "1.0"
