[package]
name = "carnot-engine"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
blake2 = "0.10"
bls-signatures = "0.14"
digest = "0.10"
derive_more = "0.99"
integer-encoding = "3"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
fraction = { version = "0.13" }
nomos-utils = { path = "../../nomos-utils" }

utoipa = { version = "4.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "nomos-utils/serde"]
simulation = []

openapi = ["dep:utoipa", "serde_json", "serde"]

[dev-dependencies]
proptest = "1.2.0"
proptest-state-machine = "0.1.0"
