[package]
edition = "2021"
license = { workspace = true }
name    = "carnot-engine"
version = "0.1.0"

[dependencies]
blake2           = "0.10"
bls-signatures   = "0.14"
derive_more      = "0.99"
digest           = "0.10"
fraction         = { version = "0.13" }
integer-encoding = "3"
nomos-utils      = { workspace = true }
rand             = "0.8"
rand_chacha      = "0.3"
serde            = { version = "1.0", features = ["derive"], optional = true }
sha2             = "0.10"
thiserror        = "1"

serde_json = { version = "1.0", optional = true }
utoipa     = { version = "4.0", optional = true }

[features]
default    = []
serde      = ["dep:serde", "nomos-utils/serde"]
simulation = []

openapi = ["dep:utoipa", "serde", "serde_json"]

[dev-dependencies]
proptest               = "1.2.0"
proptest-state-machine = "0.1.0"
