[package]
edition = "2021"
license = { workspace = true }
name    = "cryptarchia-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomos-utils = { workspace = true, optional = true }
serde       = { version = "1.0", features = ["derive"], optional = true }
thiserror   = "1"

[features]
default = []
serde   = ["dep:serde", "nomos-utils/serde"]
