[package]
edition = "2021"
license = { workspace = true }
name    = "cryptarchia-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomos-utils = { workspace = true, features = ["time"], optional = true }
serde       = { version = "1.0", features = ["derive"], optional = true }
serde_with  = { workspace = true, optional = true }
thiserror   = "1"
time        = { version = "0.3", features = ["serde"] }
tokio       = { version = "1", optional = true, features = ["time"] }

[features]
serde = ["dep:serde"]
time  = ["dep:nomos-utils", "dep:serde_with", "serde"]
tokio = ["dep:tokio"]

[package.metadata.cargo-machete]
# False positives.
ignored = ["nomos-utils"]
