[package]
name = "nomos-ledger"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { workspace = true }
rpds = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
# TODO: we only need types definition from this crate
cryptarchia-engine = { workspace = true }
cl = { workspace = true }
risc0-zkvm = { workspace = true, optional = true }
nomos_proof_statements = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }

nomos-utils = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "nomos-utils/serde", "rpds/serde"]
