[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-ledger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10"
# TODO: we only need types definition from this crate
cl                     = { workspace = true }
cryptarchia-engine     = { workspace = true }
nomos-utils            = { workspace = true, optional = true, features = ["serde"] }
nomos_proof_statements = { workspace = true }
rand                   = "0.8.5"
rpds                   = "1"
serde                  = { version = "1.0", features = ["derive"], optional = true }
thiserror              = "1"

[features]
serde = [
    "cryptarchia-engine/serde",
    "dep:nomos-utils",
    "dep:serde",
    "rpds/serde",
]
