[package]
name = "mixnet-node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.9"
nym-sphinx = { package = "nym-sphinx", git = "https://github.com/nymtech/nym", tag = "v1.1.22" }
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
sphinx-packet = "0.1.0"
tracing = "0.1.37"
tokio = { version = "1.32", features = ["net", "macros", "time"] }
mixnet-protocol = { path = "../protocol" }
mixnet-topology = { path = "../topology" }
mixnet-util = { path = "../util" }

[dev-dependencies]
tokio = {version = "1.32", features =["full"]}
