[package]
name = "mixnet-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
sphinx-packet = "0.1.0"
futures = "0.3"
tokio-util = {version  = "0.7", features = ["io", "io-util"] }