[package]
name = "mixnet-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["sync", "net", "time"] }
sphinx-packet = "0.1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
thiserror = "1"
tracing = "0.1.40"
once_cell = "1.18.0"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
tracing-test = "0.2.4"
