[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "2f70806", features = ["derive"] }
nomos-log = { path = "../../nomos-services/log" }
nomos-storage = { path = "../../nomos-services/storage", features = ["sled"] }
nomos-node = { path = "../nomos-node" }
tracing = "0.1"