[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "2f70806", features = ["derive"] }
nomos-log = { path = "../../nomos-services/log" }
nomos-storage = { path = "../../nomos-services/storage", features = ["sled"] }
nomos-api = { path = "../../nomos-services/api" }
nomos-node =  { path = "../nomos-node" }
nomos-core = { path = "../../nomos-core" }
full-replication = { path = "../../nomos-da/full-replication" }
serde = "1.0"
tracing = "0.1"
async-trait = "0.1.73"
axum = "0.6"
hyper = "0.14.27"
tower-http = "0.4"
utoipa = "4.0"
utoipa-swagger-ui = "6.0"
futures = "0.3"
serde_yaml = "0.9.25"
clap = { version = "4.4.6", features = ["derive"] }
eyre = "0.6"

