[package]
name = "mixnode"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
mixnet-node = { path = "../../mixnet/node" }
nomos-log = { path = "../../nomos-services/log" }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.0"
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", branch = "concrete-error" }
overwatch-derive = { git = "https://github.com/logos-co/Overwatch", branch = "concrete-error" }
serde = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.29.1"
