[package]
name = "mixnode"
version = "0.1.0"
edition = "2021"

[dependencies]

mixnet-node = { path = "../../mixnet/node" }
nomos-log = { path = "../../nomos-services/log" }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.0"
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", branch = "remove-async-trait", features = [
  "derive",
] }
serde = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.33", features = ["macros"] }
